--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -28,8 +28,10 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .jumbotron {
+background: #fff;
 margin-top: 26%;
 height: 50%;
+opacity: .9;
 }
 
 .jumbotron p {
@@ -44,6 +46,7 @@ height: 50%;
   width: 80%;
   margin: 0 auto;
   padding: 1em;
+  background: #EBDECB;
 }
 
 </style>
@@ -57,11 +60,13 @@ height: 50%;
            <span class="input-group-btn">
              <button id="go" class="btn btn-default" type="button">Go!</button>
            </span>
+
          </div><!-- /input-group -->
+       <div id="res"></div>
     </div>
 
 </div>
-    <!-- TODO: Here goes your content! -->
+
 
 
 
@@ -78,15 +83,17 @@ $('#go').click(function () {
   $.get( "/register?n=" + d, function( data ) {
   //$( ".result" ).html( data );
   console.log(data);
-  $('#box').append('<div id="ret"></div>');
-  $('#ret').append('<br/>Account:  <pre>' + data.account + '</pre>');
-  $('#ret').append('<br/>Contract Address: <pre>' + data.contractAddress + '</pre>');
-  $('#ret').append('<br/>Gass Price: <pre>' + data.gassPrice + '</pre>');
-  $('#ret').append('<br/>Gass Limit:  <pre>' + data.gasslimit + '</pre>');
-  $('#ret').append('<br/>Call callABI: <pre>' + data.callABI + '</pre>');
-  $('#ret').append('<br/>Number: <pre>' + data.number + '</pre>');
-  $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
 
+  $('#res').html('<br/><div id="ret"></div>');
+  $('#ret').append('<h3>' + d + '</h3><hr>');
+  $('#ret').append('<br/>Call callABI: <pre>' + data.callABI + '</pre>');
+  $('#ret').append('<br/>Account:  <pre>' + data.account + '</pre>');
+  // $('#ret').append('<br/>Contract Address: <pre>' + data.contractAddress + '</pre>');
+  // $('#ret').append('<br/>Gass Price: <pre>' + data.gassPrice + '</pre>');
+  // $('#ret').append('<br/>Gass Limit:  <pre>' + data.gasslimit + '</pre>');
+  // $('#ret').append('<br/>Number: <pre>' + data.number + '</pre>');
+  $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
+  $('#box').append('<p></p>');
 });
 });
 
