--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -96,6 +96,8 @@ $('#go').click(function () {
   // $('#ret').append('<br/>Gass Price: <pre>' + data.gassPrice + '</pre>');
   // $('#ret').append('<br/>Gass Limit:  <pre>' + data.gasslimit + '</pre>');
   // $('#ret').append('<br/>Number: <pre>' + data.number + '</pre>');
+  $('#box').append('<p></p>');
+  $('#box').append('<p></p>');
   $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
   $('#box').append('<p></p>');
 });
