--- a/dt/web/views/setendpoint.ejs
+++ b/dt/web/views/setendpoint.ejs
@@ -59,9 +59,10 @@ opacity: .9;
   <body>
 <div class="container">
     <div id="box" class="jumbotron">
-      <h3>Register Your Domain</h3>
+      <h3>Set An Endpoint</h3>
          <div class="input-group">
            <input id="domain" type="text" class="form-control" placeholder="ex. potato.dom">
+           <input id="endpoint" type="text" class="form-control" placeholder="ex. 100.1.10.100">
            <span class="input-group-btn">
              <button id="go" class="btn btn-default" type="button">Go!</button>
            </span>
@@ -85,14 +86,24 @@ opacity: .9;
 $('#go').click(function () {
   // alert('this will hit /register?n=POTATO');
   var d = $('#domain').val();
+  var e = $('#endpoint').val();
+
   function isValidDomain(v) {
   if (!v) return false;
   var re = /^(?!:\/\/)([a-zA-Z0-9-]+\.){0,5}[a-zA-Z0-9-][a-zA-Z0-9-]+\.[a-zA-Z]{2,64}?$/gi;
   return re.test(v);
 }
 
-if (1) {
-  $.get( "/setendpoint?e=" + d, function( data ) {
+function ValidateIPaddress(ipaddress) {
+  if (/^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/.test(ipaddress)) {
+    return (true)
+  }
+  alert("You have entered an invalid IP address!")
+  return (false)
+}
+
+if (isValidDomain(d) && ValidateIPaddress(e)) {
+  $.get( "/setend?n=" + d + "&e=" + e, function( data ) {
   //$( ".result" ).html( data );
   console.log(data);
   $('#res').html('<br/><div id="ret"></div>');
