--- a/dt/web/views/registerdomain.ejs
+++ b/dt/web/views/registerdomain.ejs
@@ -107,7 +107,7 @@ if (isValidDomain(d)) {
   $('#box').append('<p></p>');
   $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
   $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
-  $('#ret').append('<a href="https://rinkeby.etherscan.io/tx/' +  data  + '</a>'); 
+  $('#ret').append('<a href="https://rinkeby.etherscan.io/tx/' +  data  + '">here</a>');
   $('#box').append('<p></p>');
 });
 }
