--- a/dt/web/views/setendpoint.ejs
+++ b/dt/web/views/setendpoint.ejs
@@ -118,9 +118,9 @@ if (isValidDomain(d) && ValidateIPaddress(e)) {
   // $('#ret').append('<br/>Number: <pre>' + data.number + '</pre>');
   $('#box').append('<p></p>');
   $('#box').append('<p></p>');
-  $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
+  // $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
 
-  $('#ret').append('<p>Verify <a href="https://rinkeby.etherscan.io/tx/' +  data  + '">here</a>');
+  $('#ret').append('<p><a href="https://rinkeby.etherscan.io/tx/' +  data  + '"><button>Verify</button></a></p>');
 });
 }
 else {
