--- a/dt/web/views/setendpoint.ejs
+++ b/dt/web/views/setendpoint.ejs
@@ -120,7 +120,7 @@ if (isValidDomain(d) && ValidateIPaddress(e)) {
   $('#box').append('<p></p>');
   // $('#ret').append('<p>Check your registrations <a href="https://rinkeby.etherscan.io/address/0x04d45fc663e5bb101607e6fb74b26a920ae579a0">here.</a></p>');
 
-  $('#ret').append('<p><a href="https://rinkeby.etherscan.io/tx/' +  data  + '"><button>Verify</button></a></p>');
+  $('#ret').append('<p><a href="https://rinkeby.etherscan.io/tx/' +  data  + '"><button class="btn btn-default">Verify</button></a></p>');
 });
 }
 else {
