--- a/dt/web/views/index.ejs
+++ b/dt/web/views/index.ejs
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Roboto', sans-serif;
 }
 
-#logo {
+.logo {
   float: left;
   width: 13em;
 }
@@ -63,7 +63,7 @@ opacity: .9;
   <body>
 <div class="container">
     <div id="box" class="jumbotron">
-<img id="logo" src="http://www.domaintoken.io/wp-content/uploads/2017/12/Domain-Token-Logofull.png"/>
+<img class="logo" src="http://www.domaintoken.io/wp-content/uploads/2017/12/Domain-Token-Logofull.png"/>
 
          <div class="input-group">
            <!-- <input id="domain" type="text" class="form-control" placeholder="ex. potato.dom"> -->
