--- a/dt/web/views/registerdomain.ejs
+++ b/dt/web/views/registerdomain.ejs
@@ -27,6 +27,11 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Roboto', sans-serif;
 }
 
+.logo {
+  float: left;
+  width: 13em;
+}
+
 .jumbotron {
 background: #fff;
 margin-top: 26%;
@@ -59,6 +64,7 @@ opacity: .9;
   <body>
 <div class="container">
     <div id="box" class="jumbotron">
+      <img class="logo" src="http://www.domaintoken.io/wp-content/uploads/2017/12/Domain-Token-Logofull.png"/>
       <h3>Register Your Domain</h3>
          <div class="input-group">
            <input id="domain" type="text" class="form-control" placeholder="ex. potato.dom">
