--- a/dt/web/views/setendpoint.ejs
+++ b/dt/web/views/setendpoint.ejs
@@ -56,11 +56,17 @@ width: 80%;
   color: #000;
 }
 
+.logo {
+  float: left;
+  width: 13em;
+}
+
 </style>
   </head>
   <body>
 <div class="container">
     <div id="box" class="jumbotron">
+      <img class="logo" src="http://www.domaintoken.io/wp-content/uploads/2017/12/Domain-Token-Logofull.png"/>
       <h3>Set An Endpoint</h3>
          <div class="input-group">
            <input id="domain" type="text" class="form-control" placeholder="ex. potato.dom">
