--- a/dt/web/views/registerdomain.ejs
+++ b/dt/web/views/registerdomain.ejs
@@ -10,56 +10,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-<style>
-body {
-  background: #191919;
-  font-family: 'Open Sans', sans-serif;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  font-family: 'Roboto', sans-serif;
-}
-
-.logo {
-  float: left;
-  width: 13em;
-}
-
-.jumbotron {
-background: #fff;
-margin-top: 26%;
-height: 50%;
-opacity: .9;
-}
-
-.jumbotron p {
-  font-size: 8pt;
-}
-
-.input-group {
-  padding: 3em;
-}
-
-#domain {
-  width: 80%;
-}
-
-#ret {
-  width: 80%;
-  margin: 0 auto;
-  padding: 2em;
-  background: #EBDECB;
-  color: #000;
-}
-
-</style>
   </head>
   <body>
 <div class="container">
