--- a/dt/web/public/style.css
+++ b/dt/web/public/style.css
@@ -8,7 +8,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .logo {
-  
+
   width: 13em;
 }
 
@@ -27,6 +27,10 @@ opacity: .9;
 }
 
 #domain {
+  width: 80%;
+}
+
+#endpoint {
   width: 80%;
 }
 
